# fhir_omop

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/airflow/dags/: dev_pipeline.py  prod_pipeline.py
app/dbt/fhir_omop/: dbt_project.yml  profiles.yml
app/dbt/fhir_omop/models/marts/: mart_condition_by_gender.sql  mart_condition_prevalence.sql  mart_condition_summary.sql  mart_patient_age_distribution.sql  mart_patient_demographics.sql
app/dbt/fhir_omop/models/staging/: schema.yml  sources.yml  stg_conditions.sql  stg_patients.sql
app/terraform/: main.tf  variables.tf
data/ingest/: helper_functions.py  ingest_data.py
